# blogger

./: README.md  pyproject.toml
src/: config.py  main.py
src/services/: __init__.py
src/services/info/: __init__.py  foo.html
src/services/info/models/: __init__.py  metadata.py  result.py
test/services/: test_info.py
