[tool.poetry]
name = "blogger"
version = "0.1.0"
description = ""
authors = ["Dan Frederick <dannyfrederick360@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
langchain = "^0.0.277"
tiktoken = "^0.4.0"
openai = "^0.28.0"
jinja2 = "^3.1.2"
uvicorn = "^0.23.2"
faker = "^19.6.2"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
config = "^0.5.1"
bs4 = "^0.0.1"
asyncio = "^3.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.0"
selenium = "^4.13.0"
webdriver-manager = "^4.0.1"
pydantic = "^2.4.2"
arsenic = "^21.8"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
nox = "^2023.4.22"
pytest = "^7.4.1"
poethepoet = "^0.23.0"

[tool.poe.tasks]
test = "pytest -v"
check-tests = " pytest --collect-only -v"
run = "uvicorn src.main:app --reload"
lint = "local.lint:main"

[tool.pytest.ini_options]
markers = [
    "llm: marks tests that make calls to an llm api (deselect with '-m \"not llm\"')",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
